[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/Minigames/ExamplePallet.png" type="Texture" id=1]
[ext_resource path="res://assets/Background/Pallet.png" type="Texture" id=2]
[ext_resource path="res://scripts/Minigames/PalletsMinigame.gd" type="Script" id=3]
[ext_resource path="res://scenes/Minigames/Pallets/FixedWood.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Objects/Clipboard.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/Minigames/WoodBox.gd" type="Script" id=7]
[ext_resource path="res://assets/Minigames/WoodBox/3.png" type="Texture" id=8]
[ext_resource path="res://assets/Keys/XButton.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.45098 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.45098 )
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[sub_resource type="StreamTexture" id=13]
flags = 4
load_path = "res://.import/Box.png-7ddde33a7ad93770c050f8e72a057b52.stex"

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=10]
Button/styles/disabled = null
Button/styles/focus = SubResource( 14 )
Button/styles/hover = SubResource( 15 )
Button/styles/normal = SubResource( 16 )
Button/styles/pressed = SubResource( 17 )

[sub_resource type="DynamicFont" id=11]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 6 )

[node name="Pallets" type="Node2D"]
script = ExtResource( 3 )

[node name="Darkener" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 1230.0
margin_bottom = 670.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="FixedWood" parent="." instance=ExtResource( 4 )]
position = Vector2( 222, 416 )

[node name="FixedWood2" parent="." instance=ExtResource( 4 )]
position = Vector2( 332, 416 )

[node name="FixedWood3" parent="." instance=ExtResource( 4 )]
position = Vector2( 442, 416 )

[node name="FixedWood4" parent="." instance=ExtResource( 4 )]
position = Vector2( 552, 416 )

[node name="WoodBox" type="TextureButton" parent="."]
margin_left = 746.0
margin_top = 207.0
margin_right = 1057.0
margin_bottom = 475.0
mouse_default_cursor_shape = 6
texture_normal = ExtResource( 8 )
expand = true
script = ExtResource( 7 )

[node name="WinScreen" type="Panel" parent="."]
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 1230.0
margin_bottom = 670.0
custom_styles/panel = SubResource( 8 )

[node name="Background2" type="NinePatchRect" parent="WinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.0
margin_top = -155.0
margin_right = 295.0
margin_bottom = 155.0
texture = SubResource( 13 )
patch_margin_left = 12
patch_margin_top = 13
patch_margin_right = 15
patch_margin_bottom = 11

[node name="Lose" type="Label" parent="WinScreen/Background2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -44.0
margin_bottom = 20.0
grow_horizontal = 0
custom_fonts/font = SubResource( 9 )
text = "Você venceu!"
align = 1
valign = 1

[node name="ContinueButton" type="Button" parent="WinScreen/Background2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 25.0
margin_bottom = 64.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../LanguageButton")
theme = SubResource( 10 )
custom_colors/font_color_focus = Color( 0.0588235, 0.937255, 0.105882, 1 )
custom_colors/font_color = Color( 0.988235, 0.984314, 0.984314, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.937255, 0.105882, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.976471, 0.0392157, 1 )
custom_fonts/font = SubResource( 11 )
text = "Continuar"

[node name="Clipboard" parent="." instance=ExtResource( 5 )]

[node name="LevelText" type="RichTextLabel" parent="Clipboard" groups=["LevelText"]]
margin_left = 64.0
margin_top = 206.0
margin_right = 259.0
margin_bottom = 294.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 12 )
bbcode_enabled = true
bbcode_text = "[center]Siga as instruções abaixo pra montar o seu pallet[/center]"
text = "Siga as instruções abaixo pra montar o seu pallet"
fit_content_height = true

[node name="LevelText2" type="RichTextLabel" parent="Clipboard" groups=["LevelText"]]
margin_left = 60.0
margin_top = 292.0
margin_right = 351.0
margin_bottom = 490.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 12 )
bbcode_enabled = true
bbcode_text = "[center]Use as madeiras de dentro da caixa para preencher os espaços restantes nas madeiras fixas, elas devem estar alinhadas e a uma distância predeterminada e seguindo o padrão de encaixe, como mostra a imagem acima[/center]"
text = "Use as madeiras de dentro da caixa para preencher os espaços restantes nas madeiras fixas, elas devem estar alinhadas e a uma distância predeterminada e seguindo o padrão de encaixe, como mostra a imagem acima"
fit_content_height = true

[node name="TextureRect" type="TextureRect" parent="Clipboard"]
margin_left = 258.0
margin_top = 194.0
margin_right = 348.0
margin_bottom = 285.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true

[node name="Button" type="Button" parent="."]
margin_left = 1222.0
margin_top = 7.0
margin_right = 1274.0
margin_bottom = 48.0
icon = ExtResource( 9 )
flat = true

[connection signal="button_down" from="WoodBox" to="WoodBox" method="_on_WoodBox_pressed"]
[connection signal="pressed" from="WinScreen/Background2/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
